small change, adding nablacoin where money is written

--- a/nablapps/officeBeer/templates/officeBeer/deposit.html
+++ b/nablapps/officeBeer/templates/officeBeer/deposit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="{% url 'officebeer_account' %}">Tilbake til kontoside</a>
-<h2>Sett inn penger</h2>
+<h2>Sett inn Nablacoin</h2>
 <small class="text-muted">Her kan du skrive inn hvor mye du har satt inn via Vipps. Kjellerstyret vil så godkjenne innskuddet når de ser at pengene har gått igjennom.</small>
 <form action="" method="post">
   {% csrf_token %}
