Updated contact information on bottom of web page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -470,9 +470,9 @@
                     <h2>Kontakt</h2>
 {#                        <a class="email" href="mailto:nabla@nabla.no">nabla@nabla.no</a>#}
                         <p > <a href="/contact/">Kontaktside</a> <br>
-                        Nabla <br>
-                        NV-Fakultetet, Realfagsbygget <br>
-                        Høgskoleringen 5, NTNU <br>
+                        Linjeforeningen Nabla <br>
+                        Kjemiblokk 2, Realfagsbygget <br>
+                        Sæm Sælands vei 10, NTNU <br>
                         7034 Trondheim <br>
                         Norway
                     </p>
