--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,6 @@
                '0MMK;    oWMWo     cXWk;.'lxx,  '0M0:''lKWd.   ;c',.  .lXW0;  .dNXo'.;kWX;  :NNc  .kMk.  lWN:
                 c00l     'kKx'      ,d0K000x;   .xK000KKk:.    c0o'.    ,kKO:  .:x0K0K0d'   ;O0;  .oKo.  :0O;
                  ..        .           ....      .......        ..        ...     ....       ..     .     ..
-
          Hvis du er her, så er du kanskje interessert i å bli med i WebKom?
          Vi gjør masse kule ting - visste du at WebKom drifter flere servere på NTNU, at vi har ukentlige møter med sosial koding, og at dette er en super arena for å lære masse om data?
          Søk neste opptak, send oss en mail på webkom@nabla.no eller send en melding til noen i WebKom hvis du er interessert!
@@ -291,6 +290,7 @@
                             <a class="dropdown-item" href="http://bokskap.nabla.no/">Bokskap</a>
                             <a class="dropdown-item" href="{% url "ex_frontpage" %}">Utveksling</a>
                             <a class="dropdown-item" href="https://drive.google.com/drive/u/0/folders/0AIfT2N9gx5wOUk9PVA">Nablabanken</a>
+                            <a class="dropdown-item" href="/contact/rombooking/">Rombooking</a>
                         </div>
                     </li>
                 </ul>
