--- a/templates/base.html
+++ b/templates/base.html
@@ -340,7 +340,8 @@
                             <a class="dropdown-item" href="/admin/filebrowser/browse">Filer</a>
                             {% endif %}
 
-                            {# Kan wære den ikke denne varselimplementeringen ikke fungerer #}
+                            <!-- Kommenterer linjene under - ettersom notifikasjoner ikke er implimentert (ennå), og unødvendig å ha det oppe på siden. -->
+                            <!-- {# Kan wære den ikke denne varselimplementeringen ikke fungerer #}
                             {% load i18n sekizai_tags static %}
                                   <div class="dropdown-divider"></div>
                                   <a class=" dropdown-item" href="#"><em>{% trans "No notifications" %}</em></a>
@@ -360,7 +361,7 @@
                                   URL_NOTIFY_GOTO = "{% url "nyt:goto_base" %}";
                                 </script>
                                 {% endaddtoblock %}
-    {#                               {% addtoblock "js" %}<script type="text/javascript" src="{% static "wiki/plugins/notifications/js/ui.js" %}"></script>{% endaddtoblock %}#}
+    {#                               {% addtoblock "js" %}<script type="text/javascript" src="{% static "wiki/plugins/notifications/js/ui.js" %}"></script>{% endaddtoblock %}#} -->
                         </div>
                     </li>
                     {# end bruker-dropdown #}
