add popup for 'fadderperiode'

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,10 +176,10 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og melder deg på!
                         </p>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7rw05t8pVeb8MvBAW5QXTrHj2Zdr9PfSZoDGYNr380-V9oQ/viewform?usp=sf_link"
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2yKA-N1dtutTU_9U07u4xJwddl6NNQC1UrcQmyhAC1hXZpQ/viewform?usp=pp_url"
                            class="btn btn-primary btn-lg btn-block my-1"
                            style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>2021!</b>
+                            Trykk her for påmelding til fadderperioden - <b>2022!</b>
                         </a>
                         <p>
                             Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
@@ -194,8 +194,8 @@
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
-                            <a href="https://www.facebook.com/groups/938284966740165/about" class="list-group-item list-group-item-action"style="color:black">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2021 ved å trykke her.
+                            <a href="https://www.facebook.com/groups/659653052004839/?ref=share"style="color:black">
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2022 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
                                 <b>New international student?</b> Read more about Nabla on our english pages by clicking here.
@@ -203,7 +203,7 @@
                         </div>
                         <br>
 
-                        <img src="https://nabla.no/media/uploads/content/fadderuka21_juni.png" style="width: 100%;">
+                        <!-- <img src="https://nabla.no/media/uploads/content/fadderuka21_juni.png" style="width: 100%;"> -->
 
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
