minor changes to popup

--- a/templates/base.html
+++ b/templates/base.html
@@ -185,17 +185,19 @@
                             Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
                             Gjør dette nå, og så kan du lese resten av informasjonen senere.
                         </p>
-                        <a href="https://nabla.no/brukere/registrer/"
-                           class="btn btn-warning btn-lg btn-block my-1"
-                           style="white-space:normal">
-                            Trykk her for å registrere deg en bruker på <b>Nabla.no</b>
-                        </a>
+                        <!--<a href="https://nabla.no/brukere/registrer/"-->
+                               <!--    class="btn btn-warning btn-lg btn-block my-1"-->
+                               <!--    style="white-space:normal">-->
+                               <!--    Trykk her for å registrere deg en bruker på <b>Nabla.no</b>-->
+                        <!--</a>-->
                         <div class="list-group">
+                            <a href="https://www.facebook.com/groups/659653052004839/?ref=share"
+                               class="btn btn-warning btn-lg btn-block my-1"
+                               style="color:black">
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2022 ved å trykke her.
+                            </a>
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
-                            </a>
-                            <a href="https://www.facebook.com/groups/659653052004839/?ref=share"style="color:black">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2022 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
                                 <b>New international student?</b> Read more about Nabla on our english pages by clicking here.
